Add tests for the codelist-service and api-gateay; update Tempo Helm chart