@@ -242,7 +242,7 @@
                                 <BP_HEALTH_CHECKER_ENABLED>true</BP_HEALTH_CHECKER_ENABLED>
                                 <BP_SPRING_CLOUD_BINDINGS_DISABLED>true</BP_SPRING_CLOUD_BINDINGS_DISABLED>
                                 <BPL_JAVA_NMT_ENABLED>false</BPL_JAVA_NMT_ENABLED>
-                                <JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders --sun-misc-unsafe-memory-access=allow</JAVA_TOOL_OPTIONS>
+                                <JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders --enable-preview --sun-misc-unsafe-memory-access=allow</JAVA_TOOL_OPTIONS>
                             </env>
                             <name>ghcr.io/${github.username}/${project.artifactId}:${project.version}</name>
                         </image>
